# aosl

./: CMakeLists.txt  README.md
cmake/: build.cmake
include/kernel/: net.h
kernel/: rt_monitor.c
platform/include/hal/: aosl_hal_thread.h
platform/src/ac791n/: aosl_hal_atomic.c  aosl_hal_errno.c  aosl_hal_file.c  aosl_hal_iomp.c  aosl_hal_log.c  aosl_hal_memory.c  aosl_hal_socket.c  aosl_hal_thread.c  aosl_hal_time.c  aosl_hal_utils.c
platform/src/ac791n/config/hal/: aosl_hal_config.h
platform/src/asr1606/: aosl_hal_socket.c  aosl_hal_thread.c
platform/src/asr1606/docs/: README-zh.md  README.md
platform/src/bk7258/: aosl_hal_iomp.c
platform/src/bk725x/: aosl_hal_socket.c  aosl_hal_utils.c
platform/src/darwin/: aosl_hal_socket.c
platform/src/esp32/: aosl_hal_socket.c  aosl_hal_utils.c
platform/src/esp32/idf-proj/: .gitignore
platform/src/esp32/idf-proj/components/aosl/: CMakeLists.txt
platform/src/esp32/idf-proj/main/: CMakeLists.txt
platform/src/harmony/: aosl_hal_socket.c
platform/src/ipro7/: aosl_hal_socket.c
platform/src/linux/: aosl_hal_socket.c
platform/src/rtl8713/: aosl_hal_iomp.c  aosl_hal_socket.c
platform/src/spreadtrum-8910/: aosl_hal_socket.c
platform/src/spreadtrum-8910ff/: aosl_hal_utils.c
platform/src/spreadtrum-w337/: aosl_hal_utils.c
platform/src/tw82x/: aosl_hal_atomic.c  aosl_hal_errno.c  aosl_hal_file.c  aosl_hal_iomp.c  aosl_hal_log.c  aosl_hal_memory.c  aosl_hal_socket.c  aosl_hal_thread.c  aosl_hal_time.c  aosl_hal_utils.c
platform/src/tw82x/include/: alloca.h  inttypes.h  sdk.h
platform/src/windows/: aosl_hal_socket.c
platform/src/xr872/: aosl_hal_iomp.c  aosl_hal_socket.c
